fix the mobile overflow issue

--- a/index.css
+++ b/index.css
@@ -10,6 +10,7 @@ body {
   background-size: cover;
   width: 100%;
   overflow: hidden;
+  position: fixed;
 }
 
 img#petal {
